--- a/src/index.scss
+++ b/src/index.scss
@@ -130,7 +130,7 @@ svg {
   position: fixed;
   top: 0;
   left: 0;
-  width: clamp(100px, 50%, 200px);
+  width: 100%;
   height: 100vh;
   background-color: $cherry;
   z-index: 20;
