remove margin-left on .tech-button-container when screen is less than 500px

--- a/src/index.scss
+++ b/src/index.scss
@@ -807,8 +807,12 @@ svg {
     }
   }
 
-  .info-container {
+  .portfolio .info-container {
     flex-direction: column;
+
+    .tech-button-container {
+      margin-left: 0px;
+    }
   }
   
 }
