--- a/src/index.scss
+++ b/src/index.scss
@@ -43,7 +43,7 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(230, 230, 230, 0.5);
+  background-color: rgba(230, 230, 230, 0.80);
   z-index: -1;
 }
 
@@ -448,21 +448,90 @@ svg {
     width: 500px;
     // border: 1px solid green;
     background: transparent;
-    margin-inline: auto;
-    margin-block: 20px;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    flex-grow: 1;
+    
+
+    .project-name {
+      font-family: 'Kaushan Script', script;
+    }
+  }
+
+  .toggle-details {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+
+    .toggle-text {
+      font-size: 0.75rem;
+      text-transform: uppercase;
+    }
+
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 45px;
+      height: 21px;
+      margin: 15px;
+    }
+    
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      border-radius: 50px;
+      background-color: gray;
+      -webkit-transition: .3s;
+      transition: .3s;
+    }
+    
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 15px;
+      width: 15px;
+      left: 3px;
+      bottom: 3px;
+      border-radius: 50%;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+    
+    input:checked + .slider {
+      background-color: $pink;
+    }
+    
+    input:checked + .slider:before {
+      transform: translateX(24px);
+    }
+    
   }
 
   .image-slider {
     // border: 1px solid pink;
-    background-color: $white;
-    // border-radius: clamp(10px, 2vw, 20px) clamp(10px, 2vw, 20px) 0 0 ;
+    background-color: rgba(255, 255, 255, 0.617);
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 500px;
-    padding-inline: 30px;
+    padding-block: clamp(20px, 5vw, 50px);
+    padding-inline: 1vw;
+    margin: 1vw;
+    flex-grow: 1;
   }
 
   .image-button-container {
@@ -490,14 +559,13 @@ svg {
   }
 
   .images {
-    width: 350px;
+    width: 100%;
     overflow: hidden;
     display: flex;
     align-items: center;
 
     img {
-      width: 100%;
-      height: 100%;
+      max-width: 100%;
     }
   }
 
