center align contact h2 and change it to an h1

--- a/src/index.scss
+++ b/src/index.scss
@@ -660,11 +660,12 @@ svg {
   background-color: $white;
   padding: clamp(20px, 4vw, 50px);
 
-  h2 {
+  h1 {
     font-family: 'Kaushan Script', cursive;
     font-size: clamp(1.5rem, 4vw, 3rem);
     color: $pink;
     margin-top: 0;
+    text-align: center;
   }
 
   p {
