remove height property on avatar mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -807,7 +807,7 @@ svg {
           
           .avatar {
             width: 50%;
-            height: 50%;
+            // height: 50%;
           }
 
           h2 {
