set avatar to display flex

--- a/src/index.scss
+++ b/src/index.scss
@@ -807,7 +807,9 @@ svg {
           
           .avatar {
             width: 50%;
-            // height: 50%;
+            display: flex; 
+            justify-content: center;
+            align-items: center;
           }
 
           h2 {
